# guardrails-validator

./: .gitignore  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yml  test.yml
nope_crisis_screen/: __init__.py  main.py
tests/: test_live_smoke.py  test_validator.py
