[project]
name = "nope-crisis-screen"
version = "0.2.0"
description = "Guardrails AI validator for mental health crisis detection using NOPE"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "NOPE", email = "hello@nope.net" }]
keywords = [
    "guardrails",
    "ai-safety",
    "mental-health",
    "crisis-detection",
    "content-moderation",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["guardrails-ai>=0.4.0", "requests>=2.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "responses>=0.23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://nope.net"
Documentation = "https://docs.nope.net"
Repository = "https://github.com/nope-net/guardrails-validator"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nope_crisis_screen*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
